[project]
name = "del"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "accelerate>=1.6.0",
    "blobfile>=3.0.0",
    "datasets>=3.5.1",
    "hf-xet>=1.1.0",
    "matplotlib>=3.10.1",
    "nest-asyncio>=1.6.0",
    "protobug>=0.2.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformer-lens>=2.15.0",
    "transformers>=4.51.3",
]
